# maui-fiery

./: .gitignore  CMakeLists.txt  Messages.sh  org.kde.fiery.desktop  org.kde.fiery.metainfo.xml  org.kde.sol.desktop  org.kde.sol.metainfo.xml
po/ar/: fiery.po
po/ca/: fiery.po  sol.po
po/ca@valencia/: fiery.po  sol.po
po/cs/: fiery.po  sol.po
po/de/: fiery.po  sol.po
po/en_GB/: fiery.po  sol.po
po/eo/: fiery.po
po/es/: fiery.po  sol.po
po/eu/: fiery.po  sol.po
po/fi/: fiery.po  sol.po
po/fr/: fiery.po  sol.po
po/ga/: fiery.po
po/gl/: fiery.po
po/he/: fiery.po
po/hu/: sol.po
po/it/: fiery.po  sol.po
po/ja/: fiery.po  sol.po
po/ka/: fiery.po  sol.po
po/ko/: fiery.po  sol.po
po/lt/: fiery.po
po/lv/: fiery.po
po/my/: sol.po
po/nl/: fiery.po  sol.po
po/nn/: fiery.po  sol.po
po/pa/: sol.po
po/pl/: fiery.po  sol.po
po/pt/: fiery.po  sol.po
po/pt_BR/: fiery.po
po/sa/: fiery.po
po/sk/: fiery.po  sol.po
po/sl/: fiery.po  sol.po
po/sv/: fiery.po  sol.po
po/tr/: fiery.po  sol.po
po/ug/: fiery.po
po/uk/: fiery.po  sol.po
po/zh_CN/: fiery.po  sol.po
po/zh_TW/: fiery.po  sol.po
src/: CMakeLists.txt  assets.qrc  main.cpp  main.qml  qml.qrc
src/assets/: img_assets.qrc
src/controllers/: dbactions.cpp  dbactions.h  downloadsmanager.cpp  downloadsmanager.h  fierywebprofile.cpp  fierywebprofile.h  surf.cpp  surf.h
src/db/: db.cpp  db.h  script.sql
src/models/: bookmarksmodel.cpp  bookmarksmodel.h  downloadsmodel.cpp  downloadsmodel.h  historymodel.cpp  historymodel.h  recentmodel.cpp  recentmodel.h
src/views/: AppView.qml
src/views/browser/: ActionsMenu.qml  Browser.qml  BrowserLayout.qml  BrowserView.qml
src/views/history/: HistoryView.qml
src/views/home/: HomeView.qml
src/views/widgets/: NavigationBar.qml  SettingsDialog.qml
